First pass at adding sonority hierarchy approach

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -1,5 +1,5 @@
 # English internationalization file for Syllable Parser
-# Copyright (c) 2016-2017 SIL International
+# Copyright (c) 2016-2018 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -83,7 +83,7 @@ approach.nuclearprojection=Nuclear Projection
 approach.ot=Optimality Theory
  
 #Views within approaches
-cv.view.segmentinventory=CV Segment Inventory
+cv.view.segmentinventory=Segment Inventory
 cv.view.naturalclass=CV Natural Classes
 cv.view.syllablepatterns=CV Syllable Patterns
 cv.view.syllablepatterns.up=Move Up
@@ -98,6 +98,15 @@ cv.view.words=CV Words
 cv.view.wordspredictedvscorrect=Predicted vs Correct CV Words
 cv.view.graphemenaturalclasses=Grapheme Natural Classes
 cv.view.environments=Environments
+
+sh.view.segmentinventory=Segment Inventory
+sh.view.sonorityhierarchy=Sonority Hierarchy
+sh.view.sonorityhierarchy.up=Move Up
+sh.view.sonorityhierarchy.down=Move Down
+sh.view.words=Son. Hier. Words
+sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+sh.view.graphemenaturalclasses=Grapheme Natural Classes
+sh.view.environments=Environments
 
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
@@ -115,6 +124,7 @@ label.chooseclass=Choose class
 label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
+label.choosesegments=Choose one or more segments
 label.choosesnc=Choose one or more segments and/or natural classes
 label.close=Close
 label.correctsyllabification=Correct Syllable Breaks
@@ -169,6 +179,7 @@ label.results=Results:
 label.segment=Segment
 label.segmentinventory=Segment Inventory
 label.segmentornaturalclass=Segment or Natural Class
+label.segments=Segments
 label.segmentsandnaturalclasses=Seg. or NC
 label.sethyphenationparameters=Set Hyphenation Parameters
 label.success=Success
