Sonority hierarchy view had wrong label for the data items

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -182,6 +182,7 @@ label.segmentornaturalclass=Segment or Natural Class
 label.segments=Segments
 label.segmentsandnaturalclasses=Seg. or NC
 label.sethyphenationparameters=Set Hyphenation Parameters
+label.sonorityhierarchy=Sonority Hierarchy
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
