First pass on sonority hierarchy Try a Word

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -182,6 +182,7 @@ label.segmentornaturalclass=Segment or Natural Class
 label.segments=Segments
 label.segmentsandnaturalclasses=Seg. or NC
 label.sethyphenationparameters=Set Hyphenation Parameters
+label.shsyllabificationfailure=Failure: could not parse segments into syllables
 label.sonorityhierarchy=Sonority Hierarchy
 label.success=Success
 label.syllabifying=Syllabifying: 
@@ -279,10 +280,11 @@ report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
 report.tawnaturalclasses=Parsing segments into natural classes
 report.tawsyllablepatterns=Parsing natural classes into syllables
-report.tawdetails=The details of the syllable patterns tried, in the order they were tried, is below.  Click on the box with a plus sign in it to open that path.  If a syllable pattern failed to match, it is in {0}.  If a syllable pattern matched, but did not eventually lead to a successful parse, it is in {1}.  Finally, if a syllable pattern matched and led to a successful parse, it is in {2}.  Note that successful parses are always the last item in the list because the algorithm quits after finding the first successful parse.
+report.tawcvdetails=The details of the syllable patterns tried, in the order they were tried, is below.  Click on the box with a plus sign in it to open that path.  If a syllable pattern failed to match, it is in {0}.  If a syllable pattern matched, but did not eventually lead to a successful parse, it is in {1}.  Finally, if a syllable pattern matched and led to a successful parse, it is in {2}.  Note that successful parses are always the last item in the list because the algorithm quits after finding the first successful parse.
 report.tawgrapheme=Grapheme:
 report.tawsegment=Segment:
 report.tawsuccess=Success!
+report.tawshdetails=The details of the segment to natural class mappings and the sonority comparison between pairs of natural classes is below.  If a segment failed to map to a natural class, it is in {0}.  Otherwise it is in {2}.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
