Improve sonority hierarchy try a word

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -285,6 +285,11 @@ report.tawgrapheme=Grapheme:
 report.tawsegment=Segment:
 report.tawsuccess=Success!
 report.tawshdetails=The details of the segment to natural class mappings and the sonority comparison between pairs of natural classes is below.  If a segment failed to map to a natural class, it is in {0}.  Otherwise it is in {2}.
+report.tawshrelation=Relation
+report.tawshsegment1=Segment 1
+report.tawshsegment2=Segment 2
+report.tawshmissingnc=No Natural Class
+report.tawshstartssyllable=Starts Syllable
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
