Add sonority hierarchy comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -248,7 +248,7 @@ radio.choosebackup=Choose a backup
 
 # Differences reports
 report.cvtitle=CV Approach Comparison
-report.comparisonof=CV Approach Comparison between:
+report.cvcomparisonof=CV Approach Comparison between:
 report.performedon=Performed on 
 report.segmentinventory=Segment Inventory
 report.samesegmentinventory=Both have the same segment inventory.
@@ -275,6 +275,12 @@ report.words=Words
 report.samewords=Both have the same words with the same syllables.
 report.wordswhichdiffer=The following words differ between the two.
 report.syllabification=Syllabification
+report.shtitle=Sonority Hierarchy Approach Comparison
+report.shcomparisonof=Sonority Hierarchy Approach Comparison between:
+report.shsonorityhierarchy=Sonority Hierarchy
+report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.shnaturalclasseswhichdiffer=The following natural classes differ between the two.
+report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 # Try a Word
 report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
