Add comparison of approaches to syllabification

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -47,6 +47,7 @@ menu.findword=_Find Word
 menu.clearwords=_Remove all Words
 menu.clearcorrectsyllabificationinwords=Remove correct _syllable breaks in all words
 menu.compareimplementations=Compare _Implementations
+menu.compareapproachsyllabifications=Compare Syllabification Results between Approaches
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
 menu.settings=_Settings
@@ -210,6 +211,7 @@ label.sameimplementationscontent=The two chosen implementations are the same.  T
 label.pleasewait=Please wait...
 label.pleasewaitcomparer=This process could take a few seconds or several minutes depending on how many differences there are.
 label.pleasewaittaw=This process could take a few seconds.
+label.comparesyllabifications=Compare Syllabification Results between Approaches
 
 # file loading/saving
 file.error=Error
@@ -281,6 +283,12 @@ report.shsonorityhierarchy=Sonority Hierarchy
 report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
 report.shnaturalclasseswhichdiffer=The following natural classes differ between the two.
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
+report.syllabifications=Syllabifications
+report.samesyllabifications=All the words have the same syllabifications.
+report.syllabificationswhichdiffer=The following words have different syllabifications.
+report.syllabificationstitle=Compare syllabification approaches
+report.syllabificationscomparisonof=Comparison of CV and Sonority Hierarchy approaches to Syllabification
+report.syllabificationfailed=failed
 # Try a Word
 report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
