Fix bug in compare: order could change but report did not reflect it

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -280,7 +280,7 @@ report.syllabification=Syllabification
 report.shtitle=Sonority Hierarchy Approach Comparison
 report.shcomparisonof=Sonority Hierarchy Approach Comparison between:
 report.shsonorityhierarchy=Sonority Hierarchy
-report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.sameshsonorityhierarchy=Both have the same set of natural classes in the sonority hierarchy.
 report.shnaturalclasseswhichdiffer=The following natural classes differ between the two.
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 report.syllabifications=Syllabifications
