Fix starter file for SH

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -63,6 +63,7 @@ about.content=A linguistic program to explore syllabification and\nprovide a pri
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Asheninka files
+file.new=New Project
 file.plainlistimportfilterdescription=Plain list files
 file.paratexthyphenatedwordsfilterdescription=ParaTExt hyphenatedWords.txt files
 file.paratextexportedwordlistfilterdescription=ParaTExt exported word list files
