First pass at ONC: segment UI and get others to compile

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -97,7 +97,7 @@ cv.view.syllablepatterns.ncs=Natural Classes
 cv.view.syllablepatterns.remove=Remove
 cv.view.syllablepatterns.wordboundary=Word boundary
 cv.view.words=CV Words
-cv.view.wordspredictedvscorrect=Predicted vs Correct CV Words
+cv.view.wordspredictedvscorrect=Predicted vs. Correct CV Words
 cv.view.graphemenaturalclasses=Grapheme Natural Classes
 cv.view.environments=Environments
 
@@ -106,13 +106,18 @@ sh.view.sonorityhierarchy=Sonority Hierarchy
 sh.view.sonorityhierarchy.up=Move Up
 sh.view.sonorityhierarchy.down=Move Down
 sh.view.words=Son. Hier. Words
-sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+sh.view.wordspredictedvscorrect=Predicted vs. Correct Son. Hier. Words
 sh.view.graphemenaturalclasses=Grapheme Natural Classes
 sh.view.environments=Environments
 
-onc.view.segmentinventory=ONC Segment Inventory
-onc.view.syllablepatterns=ONC Syllable Patterns
+onc.view.segmentinventory=Segment Inventory
+onc.view.sonorityhierarchy=Sonority Hierarchy
+onc.view.sonorityhierarchy.up=Move Up
+onc.view.sonorityhierarchy.down=Move Down
 onc.view.words=ONC Words
+onc.view.wordspredictedvscorrect=Predicted vs. Correct ONC Words
+onc.view.graphemenaturalclasses=Grapheme Natural Classes
+onc.view.environments=Environments
 
 # labels
 label.active=Active
@@ -213,6 +218,12 @@ label.pleasewait=Please wait...
 label.pleasewaitcomparer=This process could take a few seconds or several minutes depending on how many differences there are.
 label.pleasewaittaw=This process could take a few seconds.
 label.comparesyllabifications=Compare Syllabification Results between Approaches
+label.onset=Can be in onset
+label.nucleus=Can be in nucleus
+label.coda=Can be in coda
+label.onsetHeader=O
+label.nucleusHeader=N
+label.codaHeader=C
 
 # file loading/saving
 file.error=Error
