First pass at adding syllabifcation parameters to UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -114,6 +114,8 @@ onc.view.segmentinventory=Segment Inventory
 onc.view.sonorityhierarchy=Sonority Hierarchy
 onc.view.sonorityhierarchy.up=Move Up
 onc.view.sonorityhierarchy.down=Move Down
+onc.view.syllabificationparameters=Syllabification Parameters
+onc.view.onsetprinciple=Onset Principle
 onc.view.words=ONC Words
 onc.view.wordspredictedvscorrect=Predicted vs. Correct ONC Words
 onc.view.graphemenaturalclasses=Grapheme Natural Classes
@@ -224,6 +226,10 @@ label.coda=Can be in coda
 label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
+label.codasallowed=Codas allowed
+label.onsetmaximization=Onset maximization
+label.onsetprinciple=Onset principle
+label.syllabificationparameters=Syllabification Parameters
 
 # file loading/saving
 file.error=Error
@@ -259,6 +265,9 @@ tooltip.findword=Find Word   Ctrl+F
 #Radio buttons
 radio.current=Current implementation
 radio.choosebackup=Choose a backup
+radio.allbutfirst=All but the first syllable must have an onset
+radio.everysyllable=Every syllable must have an onset
+radio.onsetsnotrequired=Onsets are not required
 
 # Differences reports
 report.cvtitle=CV Approach Comparison
