New formatting for syllabification compare Fix bug in syllabification compare preferences

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -343,8 +343,11 @@ report.syllabifications=Syllabifications
 report.samesyllabifications=All the words have the same syllabifications.
 report.syllabificationswhichdiffer=The following words have different syllabifications.
 report.syllabificationstitle=Compare syllabification approaches
-report.syllabificationscomparisonof=Comparison of CV and Sonority Hierarchy approaches to Syllabification
+report.syllabificationscomparisonof=Comparison of Approaches to Syllabification
 report.syllabificationfailed=failed
+report.cvapproachabbreviation=CV
+report.shapproachabbreviation=SH
+report.oncapproachabbreviation=ONC
 # Try a Word
 report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
