First pass at ONC comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -193,6 +193,7 @@ label.segmentsandnaturalclasses=Seg. or NC
 label.sethyphenationparameters=Set Hyphenation Parameters
 label.shsyllabificationfailure=Failure: could not parse segments into syllables
 label.sonorityhierarchy=Sonority Hierarchy
+label.oncsyllabificationfailure=Failure: could not parse segments into syllables
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
