--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,8 @@
 	<classpathentry kind="lib" path="diff-match-patch/diff-match-patch.jar"/>
 	<classpathentry kind="lib" path="ControlsFX/controlsfx-8.40.12.jar"/>
 	<classpathentry kind="lib" path="ANTLR/antlr-4.7-complete.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="LibJavaDev/libjavadev-1.2.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_162"/>
+	<classpathentry kind="lib" path="lingtree/LingTree.jar" sourcepath="/LingTree/src/org/sil/lingtree/model"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
