Add LingTree to ONC Words UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -182,6 +182,7 @@ label.orthographicform=Grapheme
 label.orthographicforms=Graphemes
 label.orthographicformswithcolon=Graphemes:
 label.parserresult=Parser Result
+label.parsertree=Tree Diagram
 label.predictedsyllabification=Predicted Syllable Breaks
 label.restoreproject=Restore a Project
 label.results=Results:
