--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -116,6 +116,8 @@ onc.view.sonorityhierarchy.up=Move Up
 onc.view.sonorityhierarchy.down=Move Down
 onc.view.syllabificationparameters=Syllabification Parameters
 onc.view.onsetprinciple=Onset Principle
+onc.view.templates=ONC Templates
+onc.view.filters=ONC Filters
 onc.view.words=ONC Words
 onc.view.wordspredictedvscorrect=Predicted vs. Correct ONC Words
 onc.view.graphemenaturalclasses=Grapheme Natural Classes
