Second pass at UI for Templates and Filters

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -154,6 +154,8 @@ label.environments=Environments
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
+label.filterrepresentation=Slots
+label.filters=Filters
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
 label.hyphenationparametersindesign=InDesign (simple list)
@@ -200,6 +202,8 @@ label.oncsyllabificationfailure=Failure: could not parse segments into syllables
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
+label.templaterepresentation=Slots
+label.templates=Templates
 label.tryaword=Try a Word
 label.tryit=Try it
 label.untested=Untested
