Add repair strategy to filters, pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -124,6 +124,7 @@ onc.view.graphemenaturalclasses=Grapheme Natural Classes
 onc.view.environments=Environments
 
 # labels
+label.action=Action
 label.active=Active
 label.backupcomment=Enter a description for this backup: 
 label.backupdirectory=Backup directory: 
@@ -155,9 +156,10 @@ label.environments=Environments
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
+label.filterrepairstartposition=Repair start position
 label.filterrepresentation=Slots
 label.filters=Filters
-label.filtertype=Type
+label.filtertype=Scope
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
 label.hyphenationparametersindesign=InDesign (simple list)
@@ -314,6 +316,8 @@ radio.choosebackup=Choose a backup
 radio.allbutfirst=All but the first syllable must have an onset
 radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
+radio.repairaction=Repair
+radio.failaction=Fail
 
 # Differences reports
 report.cvtitle=CV Approach Comparison
