Require a term before and after slot position in filter grammar

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -432,6 +432,7 @@ templatefiltersyntaxerror.missing_opening_paren=An opening parenthesis is missin
 templatefiltersyntaxerror.missing_opening_square_bracket=An opening square bracket is missing; detected at or about position {0}.
 templatefiltersyntaxerror.required_slot_position_indicator=One slot position indicator | is required when using the Repair action.  Please add one.
 templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=The slot position indicator | needs to be followed by a segment or a class.
+templatefiltersyntaxerror.slot_position_needs_segment_or_class_before_it=The slot position indicator | needs to have at least one segment or class before it.
 templatefiltersyntaxerror.unknown=Unknown error in template or filter description; detected at or about position {0}.
 templatefiltersyntaxerror.unknownsegment=Unrecognized segment beginning at '{0}' in template or filter description.
 templatefiltersyntaxerror.unknownnaturalclass=Unrecognized natural class '{0}' in template or filter description.
