--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -268,6 +268,7 @@ label.oncstinucleusfilterfailed=A nucleus filter failed: {0}
 label.oncstinucleusrepairnotapply=A nucleus repair filter could not apply: {0}
 label.oncstinucleustemplateblocksadding=No nucleus template applies while trying to add another segment to this nucleus; started a new syllable
 label.oncstinucleustemplateblocksaddingonsetrequiredbutwontbeone=No nucleus template applies while trying to adding a nucleus to this syllable; cannot create a new syllable because an onset will be required but there would not be one
+label.oncstinucleustemplatematched=A nucleus template matched: {0}
 label.oncstinucleustemplatesallfail=No nucleus templates match
 label.oncstionsetfilterfailed=An onset filter failed: {0}
 label.oncstionsetrepairapplied=An onset repair filter applied: {0}
