Add comment field to words

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -212,6 +212,7 @@ label.tryaword=Try a Word
 label.tryit=Try it
 label.untested=Untested
 label.word=Word
+label.comment=Comment
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.words=Words
 label.wordtofind=Word to find: 
