Add ability to move to previous or next item in a table Refactor handleInsertNewItem() and handleRemoveItem() Move position of comment field in word displays to after the word Add a colun for comment in word displays

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -35,6 +35,8 @@ menu.copy=_Copy
 menu.paste=_Paste
 menu.insertnew=_New item
 menu.remove=_Remove item
+menu.nextitem=Ne_xt item
+menu.previousitem=Pre_vious item
 #menu.language=_Language
 menu.vernacularfont=_Vernacular Font
 menu.analysisfont=_Analysis Font
