Add filters and templates to comparisons for ONC approach Refactor CVNaturalClasses so use common code for CV and ONC comparisons

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -396,6 +396,14 @@ report.samecodasallowed=Codas allowed is the same.
 report.codasalloweddiffers=Codas allowed differs.
 report.onsetmaximizationdiffers=Onset maximization differs.
 report.onsetprinciplediffers=Onset principle differs.
+report.filters=Filters
+report.samefilters=Both have the same filters.
+report.filterswhichdiffer=The following filters differ between the two.
+report.filterinorder=The order of the filters is shown below.
+report.templates=Templates
+report.sametemplates=Both have the same templates.
+report.templateswhichdiffer=The following templates differ between the two. 
+report.templateinorder=The order of the templates is shown below.
 # Try a Word
 report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
