Add ICU sorting ability, part 3

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -176,6 +176,7 @@ label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
 label.discretionaryhyphen=Discretionary hyphen character(s):
 label.hyphenationstartsafter=Hyphenation starts after this many characters from the beginning:
 label.hyphenationstopsbefore=Hyphenation stops before this many characters from the end:
+label.icurules=ICU rules to use:
 label.importing=Importing: 
 label.importingcanceled=Importing canceled!
 label.importparatextcharacters=Import segments (characters) from ParaTExt 7 .lds file.\nThis will remove all current segments, including those defined in the CV Natural Classes.\n\nWe suggest you make a backup before doing this.
@@ -186,6 +187,7 @@ label.backupnowbeforeimport=Do you want to do a backup now?\n(Yes will let you m
 label.graphemenaturalclass=Grapheme Natural Class
 label.graphemesandnaturalclasses=Gra. or NC
 label.graphemeornaturalclass=Grapheme or natural class
+label.languagetouse=Language to use:
 label.name=Name
 label.naturalclasses=Natural Classes
 label.no=No
