Add ICU sorting ability, part 4

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -73,6 +73,7 @@ file.exportedhyphenationlistfilterdescription=Hyphenation files
 file.xlingpaperhyphenationexceptionfilterdescription=XLingPaper hyphenation exception files
 file.requiresaveheader=Important!
 file.requiresavecontent=Please save the file.
+file.ldmlfilterdescription=LDML files
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Choose Interface Language
