Add ICU sorting ability, part 5

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -161,6 +161,7 @@ label.description=Description
 label.discussion=Discussion
 label.environmentrepresentation=Environment
 label.environments=Environments
+label.errorinicurules=Error in ICU rules at the exclamation mark (!)
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
