Get color, font and node orientation to work in the basic UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -206,7 +206,7 @@ label.parsertree=Tree Diagram
 label.predictedsyllabification=Predicted Syllable Breaks
 label.restoreproject=Restore a Project
 label.results=Results:
-label.righttoleft=Right to left
+label.righttoleft=Right-to-left
 label.segment=Segment
 label.segmentinventory=Segment Inventory
 label.segmentornaturalclass=Segment or Natural Class
