--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -237,6 +237,7 @@ label.wordtotry=Word to try:
 label.yes=Yes
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
+label.restorefrombackup=Restore a project from a backup
 label.clearwords=Remove all the words from the word list.\nWe suggest you make a backup before doing this.
 label.clearcorrectsyllabificationinwords=Remove all the correct syllabification forms in all words in the word list\nWe suggest you make a backup before doing this.
 label.areyousure=Are you sure you want to do this?
