Add language name field to writing system / language

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -189,6 +189,7 @@ label.backupnowbeforeimport=Do you want to do a backup now?\n(Yes will let you m
 label.graphemenaturalclass=Grapheme Natural Class
 label.graphemesandnaturalclasses=Gra. or NC
 label.graphemeornaturalclass=Grapheme or natural class
+label.languagename=Language name:
 label.languagetouse=Language to use:
 label.name=Name
 label.naturalclasses=Natural Classes
