Add word filters, pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -48,6 +48,13 @@ menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
 menu.clearcorrectsyllabificationinwords=Remove correct _syllable breaks in all words
+menu.filterwords=Filter words
+menu.filterpredictedwords=Filter predicted syllable breaks
+menu.filtercorrectwords=Filter correct syllable breaks
+menu.filterremoveallfilters=Remove all filters
+menu.filterremovefiltercorrectwords=Remove filter correct syllable breaks
+menu.filterremovefilterpredictedwords=Remove filter predicted syllable breaks
+menu.filterremovefilterwords=Remove filter words
 menu.compareimplementations=Compare _Implementations
 menu.compareapproachsyllabifications=Compare Syllabification Results between Approaches
 menu.view=_View
@@ -159,15 +166,20 @@ label.cvsyllabificationfailure=Failure: could not parse natural classes into syl
 label.date=Date
 label.description=Description
 label.discussion=Discussion
+label.entertexttosearchfor=Enter text to search for
 label.environmentrepresentation=Environment
 label.environments=Environments
 label.errorinicurules=Error in ICU rules at the exclamation mark (!)
+label.errorinregularexpression=Error found in the regular expression at the caret (^)
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
 label.filterrepresentation=Slots
 label.filters=Filters
 label.filtertype=Scope
+label.filtercorrectsyllablebreaks=Filter correct syllable breaks
+label.filterpredictedsyllablebreaks=Filter predicted syllable breaks
+label.filterwords=Filter words
 label.font=Font
 label.general=General
 label.help=Help
@@ -355,6 +367,10 @@ tooltip.remove=Remove item   Ctrl+D
 tooltip.syllabifywords=Parse all Words   Ctrl+W
 tooltip.convertpredictedtocorrect=Convert predicted to correct syllabification
 tooltip.findword=Find Word   Ctrl+F
+tooltip.filtercorrectsyllablebreaks=Filter Correct Syllable breaks
+tooltip.filterpredictedsyllablebreaks=Filter Predicted Syllable breaks
+tooltip.filterwords=Filter Words
+tooltip.removeallfilters=Remove All Filters
 
 #Radio buttons
 radio.current=Current implementation
@@ -364,6 +380,17 @@ radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
 radio.repairaction=Repair
 radio.failaction=Fail
+radio.anywhere=Anywhere
+radio.end=At end
+radio.start=At start
+radio.wholeitem=Whole item
+radio.regularexpression=Match for regular expression
+radio.blanks=Blanks
+radio.nonblanks=Non-blanks
+
+#Check boxes
+checkbox.matchcase=Match case
+checkbox.matchdiacritics=Match diacritics
 
 # Differences reports
 report.cvtitle=CV Approach Comparison
