SYLP-51: Change spelling of ParaTExt to Paratext

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -14,19 +14,19 @@ menu.projectmanagementbackup=_Back up this project...
 menu.projectmanagementrestore=_Restore a project...
 menu.importsegments=I_mport Segments
 menu.importflexphonemes=Import segments (phonemes) from _FLEx database
-menu.importparatextcharacters=Import segments (characters) from _ParaTExt 7 .lds file
+menu.importparatextcharacters=Import segments (characters) from _Paratext 7 .lds file
 menu.importwords=_Import Words
 menu.importplainwordlist=Import _text file with one word per line
 menu.importflexwordlist=Import word list exported from _FLEx (in tab-delimited form)
-menu.importparatextwordlist=Import word list exported from _ParaTExt
-menu.importparatexthyphenatedwords=Import _hyphenatedWords.txt file from ParaTExt
+menu.importparatextwordlist=Import word list exported from _Paratext
+menu.importparatexthyphenatedwords=Import _hyphenatedWords.txt file from Paratext
 menu.exporthyphenatedwords=_Export Hyphenated Words
 menu.exporthyphenatedwordsforindesign=Export for _InDesign (simple list)
-menu.exporthyphenatedwordsforparatext=Export for _ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforparatext=Export for _Paratext (hyphenatedWords.txt)
 menu.exporthyphenatedwordsforxlingpaper=Export for _XLingPaper (hyphenation exceptions file)
 menu.exporthyphenationparameters=Hyphenation Parameters
 menu.exporthyphenationparametersforindesign=Parameters for InDesign (simple list)
-menu.exporthyphenationparametersforparatext=Parameters for ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforparatext=Parameters for Paratext (hyphenatedWords.txt)
 menu.exporthyphenationparametersforxlingpaper=Parameters for XLingPaper (hyphenation exceptions file)
 menu.exit=E_xit
 menu.edit=_Edit
@@ -74,8 +74,8 @@ about.content=A linguistic program to explore syllabification and\nprovide a pri
 file.filterdescription=Asheninka files
 file.new=New Project
 file.plainlistimportfilterdescription=Plain list files
-file.paratexthyphenatedwordsfilterdescription=ParaTExt hyphenatedWords.txt files
-file.paratextexportedwordlistfilterdescription=ParaTExt exported word list files
+file.paratexthyphenatedwordsfilterdescription=Paratext hyphenatedWords.txt files
+file.paratextexportedwordlistfilterdescription=Paratext exported word list files
 file.exportedhyphenationlistfilterdescription=Hyphenation files
 file.xlingpaperhyphenationexceptionfilterdescription=XLingPaper hyphenation exception files
 file.requiresaveheader=Important!
@@ -185,7 +185,7 @@ label.general=General
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
 label.hyphenationparametersindesign=InDesign (simple list)
-label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
+label.hyphenationparametersparatext=Paratext (hyphenatedWords.txt)
 label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
 label.discretionaryhyphen=Discretionary hyphen character(s):
 label.hyphenationstartsafter=Hyphenation starts after this many characters from the beginning:
@@ -193,7 +193,7 @@ label.hyphenationstopsbefore=Hyphenation stops before this many characters from 
 label.icurules=ICU rules to use:
 label.importing=Importing: 
 label.importingcanceled=Importing canceled!
-label.importparatextcharacters=Import segments (characters) from ParaTExt 7 .lds file.\nThis will remove all current segments, including those defined in the CV Natural Classes.\n\nWe suggest you make a backup before doing this.
+label.importparatextcharacters=Import segments (characters) from Paratext 7 .lds file.\nThis will remove all current segments, including those defined in the CV Natural Classes.\n\nWe suggest you make a backup before doing this.
 label.importparatextcharacterserror=The {0} file did not have any characters defined.  The import failed.
 label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the correct syllabifications.\nNo will clear the correct syllabifications without backing up first.\nCancel will exit.)
 label.backupnowbeforeclearwords=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the words.\nNo will clear the words without backing up first.\nCancel will exit.)
