Make Try a Word work for non-filter/template parsing

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -347,6 +347,19 @@ label.oncstateonset=onset
 label.oncstateonsetornucleus=onset or nucleus
 label.oncstatetemplatefailed=template failed
 label.oncstateunknown=
+# Moraic Syllabification tracing info status messages
+label.moraicstiaddedasonsettosyllable=Added segment 1 as an onset directly to the syllable node
+label.moraicstiaddedwithmora=Added segment 1 with a mora
+label.moraicstiappendedtomora=Appended segment 1 to mora
+label.moraicstimaxmorasstartnewsyllable=Maximum number of moras in syllable found; start a new syllable
+label.moraicstiunknown=
+# Moraic Syllabification state
+label.moraicstatefilterfailed=filter failed
+label.moraicstatefilterrepairapplied=filter applied
+label.moraicstatemora=mora added
+label.moraicstateonset=onset
+label.moraicstatetemplatefailed=template failed
+label.moraicstateunknown=
 
 # file loading/saving
 file.error=Error
