Add syllable template processing to Moraic approach

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -356,6 +356,8 @@ label.moraicstiappendedtomora=Appended segment 1 to mora
 label.moraicstiexpectedmoranotfound=Expected a mora but it was not found
 label.moraicstimaxmorasstartnewsyllable=Maximum number of moras in syllable found; start a new syllable
 label.moraicstinoninitialonsettemplatematchedstartnewsyllable=Non-initial onset template matched; start a new syllable
+label.moraicstisyllabletemplatefailed=No syllable template matched
+label.moraicstisyllabletemplatematched=A syllable template {0} matched this: {1}
 label.moraicstiunknown=
 # Moraic Syllabification state
 label.moraicstatefilterfailed=filter failed
