Add warning message for unimplemented templates and filters

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -285,8 +285,12 @@ label.coda=Can be in coda
 label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
+label.oncfilterwarning=WARNING: Syllable filters are not implemented for the ONC approach.
+label.onctemplatewarning=WARNING: Syllable templates are not implemented for the ONC approach.
 label.moras=Moras born
 label.morasHeader=Moras
+label.moraicfilterwarning=WARNING: Only onset filters are implemented for the moraic approach.
+label.moraictemplatewarning=WARNING: Rime, nucleus, and coda templates are not implemented for the moraic approach.
 label.codasallowed=Codas allowed
 label.maxmoras=Maximum moras per syllable
 label.weightbyposition=Use weight by position
