NP Rules UI, first pass

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -159,6 +159,8 @@ label.choosefont=Choose font information
 label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
+label.chooseruleaction=Choose action
+label.chooserulelevel=Choose level
 label.choosesegments=Choose one or more segments
 label.choosesnc=Choose one or more segments and/or natural classes
 label.choosetype=Choose type
@@ -220,6 +222,11 @@ label.no=No
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
+label.nprule.action=Action
+label.nprule.affectedsegmentornaturalclass=Affected
+label.nprule.context=Context
+label.nprule.level=Level
+label.nprule.obeysssp=Obeys SSP
 label.nprules=Nuclear Projection Rules
 label.ok=OK
 label.orthographicform=Grapheme
@@ -377,6 +384,9 @@ label.moraicstatemora=mora added
 label.moraicstateonset=onset
 label.moraicstatetemplatefailed=template failed
 label.moraicstateunknown=
+# Nuclear Projection
+label.none=<None>
+label.nonedescription=[Choose this to remove whatever segment or class is present.]
 
 # file loading/saving
 file.error=Error
@@ -589,3 +599,13 @@ exception.content=Please copy the exception information below, email it to ashen
 exception.header=A serious error happened.
 exception.label=The exception stacktrace was:
 exception.title=Error Found!
+
+#NP rule actions and levels
+nprule.action.attach=Attach
+nprule.action.build=Build
+nprule.action.left_adjoin=Left adjoin
+nprule.action.right_adjoin=Right adjoin
+nprule.level.all=All
+nprule.level.n=N
+nprule.level.n_bar=N'
+nprule.level.n_double_bar=N''
